--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,8 +1,10 @@
-:root {
+*{
   margin: 0;
   padding: 0;
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   box-sizing: border-box;
+}
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   --white-color: #F7F7F7;
   --purple-color: #6C63FF;
@@ -11,13 +13,29 @@
   --gary-color: #CDCDCD;
   --dark-gary: #a7a7a7;
 }
+.dark {
+  background-color: var(--black-color);
+  color: var(--white-color);
+  min-height: 100vh;
+  padding-top: 5rem;
+}
 
-body {
-  margin-top: 5rem;
+.light {
   background-color: var(--white-color);
+  color: #222;
+  min-height: 100vh;
+  padding-top: 5rem;
+}
+
+.dark body {
   width: 100vw;
   overflow-x: hidden; 
 }
+.light body {
+  width: 100vw;
+  overflow-x: hidden; 
+}
+
 .todo-wrapper {
   width: 100%;
   max-width: 50rem; 
@@ -25,9 +43,14 @@ body {
   padding: 0 1rem;
 }
 
-.title {
-  color: var(--black-color);
+.light .title {
   text-align: center;
+  margin-bottom: 1rem;
+}
+
+.dark .title {
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .input-container {
@@ -41,10 +64,16 @@ body {
   padding: 8px;
   font-size: 16px;
   width: 100%;
-  border: 2px solid #ddd;
+  border: 2px solid var(--purple-color);
   border-radius: 6px;
-  flex: 1; /* input takes available space */
-  border-color: var(--purple-color);
+  flex: 1; 
+}
+
+.dark .input-container input {
+  border: 2px solid var(--purple-color);;
+  border-radius: 6px;
+  background-color: var(--black-color);
+  color: var(--white-color);
 }
 
 .input-container input:focus {
@@ -52,7 +81,7 @@ body {
   outline: none;
 }
 
-.btn-add {
+.btn-add, .toggle-btn {
   padding: 8px 16px;
   font-size: 16px;
   background-color: var(--purple-color);
@@ -66,6 +95,7 @@ body {
   text-decoration: line-through;
   opacity: 0.6;
 }
+
 .task-container {
   display: flex;
   justify-content: center;
@@ -73,6 +103,7 @@ body {
   flex-direction: column;
   width: 100%;
 }
+
 .task-item {
   width: 100%;
   max-width: 80%;
@@ -84,8 +115,9 @@ body {
   gap: 10px;
   margin-bottom: 8px;
 }
+
 .task-text {
-  flex: 1; /* Take up remaining space */
+  flex: 1; 
   word-wrap: break-word;
   overflow-wrap: break-word;
   line-height: 1.5;
@@ -135,6 +167,11 @@ body {
    border: 1px solid var(--bc, var(--border));
    background: var(--b, var(--background));
    transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+}
+
+.dark .checkbox-wrapper-1 .checkbox-1 {
+  border: 1px solid var(--bc, var(--dark-purple));
+  background: var(--b, var(--black-color));
 }
 
 .checkbox-wrapper-1 .checkbox-1:after {
@@ -213,6 +250,11 @@ body {
 .checkbox-wrapper-1 *:before,
 .checkbox-wrapper-1 *:after {
    box-sizing: inherit;
+}
+
+/* TOGGLE MODE ICON */
+.fa-moon, .fa-sun{
+  font-size:larger;
 }
 
 
